@@ -18,6 +18,4 @@
      <implements interface=".interfaces.IReferenceField" />
   </class>
 
-
-
 </configure>
